@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.684 2005-06-30 00:39:16 castaglia Exp $
+$Id: NEWS,v 1.685 2005-07-02 18:41:06 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -50,6 +50,8 @@ CVS
   will fall back to checking the old format.  Note that this only affects
   sites which have "SQLAuthTypes Backend" in their proftpd.conf.
 - Bug 2647 - Improper "socklen_t" redefine for HP-UX when using X/Open.
+- Fixed mod_sql bug where using SQLLog and SQLNamedQuery with the %L or
+  %a variables, and logging the EXIT pseudo-command, would cause a segfault.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
